[package]
name = "presale"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "presale"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
vesting = { path = "../vesting", features = ["cpi"] }
referral = { path = "../referral", features = ["cpi"] }
anchor-lang = "0.19.0"